--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 
     <div class="contact">
       <h3>Contact Information</h3>
-      <p>📞 Phone: <em>[Insert Number]</em></p>
-      <p>📧 Email: <em>[Insert Email]</em></p>
+      <p>📞 Phone: <em>914.882.0124</em></p>
+      <p>📧 Email: <em>Marianakiwala2@gmail.com</em></p>
     </div>
   </section>
 </body>
