--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
       border-radius: 6px;
       margin-top: 20px;
     }
+    .images {
+      display: flex;
+      justify-content: space-between;
+      margin: 20px 0;
+      gap: 10px;
+    }
+    .images img {
+      width: 32%;
+      border-radius: 8px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
   </style>
 </head>
 <body>
@@ -54,6 +65,12 @@
   </header>
 
   <section>
+    <div class="images">
+      <img src="image1.jpg" alt="Caregiver assisting client">
+      <img src="image2.jpg" alt="Healthy meal preparation">
+      <img src="image3.jpg" alt="Companionship and support">
+    </div>
+
     <h2>Profile</h2>
     <p>
       Compassionate and dedicated Home Health Aide with proven experience in providing high-quality personal care and support to clients. Skilled in assisting with daily living activities, ensuring safety, and promoting overall well-being. Known for excellent communication, empathy, flexibility, and patience in delivering compassionate care tailored to individual needs.
@@ -93,10 +110,8 @@
     </p>
 
     <div class="contact">
-      <h3>Contact Information</h3>
-      <p>📞 Phone: <em>914.882.0124</em></p>
-      <p>📧 Email: <em>Marianakiwala2@gmail.com</em></p>
-    </div>
+      <h3>Contact Information914.882.0124<BR>
+Email:  Marianakiwala2@gmail.com    </div></h3>
   </section>
 </body>
 </html>
