--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
   <section>
     <div class="images">
-      <img src="image1.jpg" alt="Caregiver assisting client">
+      <img src="Mary.jpeg" alt="Caregiver assisting client">
       <img src="image2.jpg" alt="Healthy meal preparation">
       <img src="image3.jpg" alt="Companionship and support">
     </div>
